# genai-tools-app

./: .gitignore  AGENTS.md  Makefile  README.md  dev.sh
.kiro/agents/: planner.md
.kiro/specs/ai-chat-mvp/: design.md  requirements.md  tasks.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/models/: __init__.py  message.py
backend/app/repositories/: __init__.py  message_repository.py
backend/app/services/: __init__.py  claude_provider.py  google_provider.py  llm_provider.py  llm_service.py  openai_provider.py
backend/tests/: test_api_key_usage.py  test_conversation_repository.py  test_conversations_api.py  test_database_error_handling.py  test_error_handling.py  test_integration.py  test_message_completeness.py  test_message_persistence.py  test_model_routing.py  test_provider_format_conversion.py  test_sse_connection.py
frontend/: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/e2e/: basic.spec.ts  error-handling.spec.ts  model-specific.spec.ts  streaming.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.css  index.css  integration.test.tsx  types.ts
frontend/src/components/: ChatInterface.css  ChatInterface.test.tsx  ChatInterface.tsx  ConversationSidebar.css  ConversationSidebar.tsx  MessageInput.css  MessageInput.test.tsx  MessageInput.tsx  MessageList.css  MessageList.property.test.tsx  MessageList.test.tsx  MessageList.tsx
frontend/src/constants/: modelDisplay.ts
frontend/src/services/: ChatService.test.ts  ChatService.ts
frontend/src/test/: setup.ts
frontend/test-results/: .last-run.json
frontend/tests/components/: ChatInterface.test.tsx  MessageInput.test.tsx  MessageList.property.test.tsx  MessageList.test.tsx
frontend/tests/integration/: integration.test.tsx
frontend/tests/services/: ChatService.test.ts
